compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-1/pos/3.1.kt
/*
 * KOTLIN PSI SPEC TEST (POSITIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 1 -> sentence 3
 * NUMBER: 1
 * DESCRIPTION: Simple real literals suffixed by f/F (the float suffix) with a different whole-number part and fraction part.
 */

konst konstue = 0.0f
konst konstue = 0.00F
konst konstue = 0.000f
konst konstue = 0.0000F

konst konstue = 00.0F
konst konstue = 000.00F
konst konstue = 0000.000f

konst konstue = 1.0F
konst konstue = 22.00f
konst konstue = 333.000f
konst konstue = 4444.0000f
konst konstue = 55555.0F
konst konstue = 666666.00F
konst konstue = 7777777.000f
konst konstue = 88888888.0000f
konst konstue = 999999999.0f

konst konstue = 0000000000.1234567890F
konst konstue = 123456789.23456789F
konst konstue = 2345678.345678F
konst konstue = 34567.4567f
konst konstue = 456.56f
konst konstue = 5.65F
konst konstue = 654.7654f
konst konstue = 76543.876543f
konst konstue = 8765432.98765432F
konst konstue = 987654321.0987654321F

konst konstue = 0.1111F
konst konstue = 1.22222f
konst konstue = 9.33333f
konst konstue = 9.444444F
konst konstue = 8.5555555f
konst konstue = 2.66666666F
konst konstue = 3.777777777f
konst konstue = 7.8888888888f
konst konstue = 6.99999999999F
