compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-1/neg/3.2.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 1 -> sentence 3
 * NUMBER: 2
 * DESCRIPTION: A float suffix in the real literals right after a several dots (possibly separated by digits).
 */

konst konstue = 0..f
konst konstue = 000..F
konst konstue = 0.0.F
konst konstue = 00.0.f
konst konstue = 000.00.f
konst konstue = 0000.1.f

konst konstue = 0....F
konst konstue = 1.1..f
konst konstue = 2.2.3F
konst konstue = 3.0.0.0.0.0.0f
konst konstue = 4.00000.f
konst konstue = 5.1.2.3.4.5.6.f
konst konstue = 6..1..2...3..4..5f
konst konstue = 7.8..9...0....1F
konst konstue = 8.F

konst konstue = 1......................................................................................................f
konst konstue = 2....2.F
konst konstue = 333............3f
konst konstue = 4444..........4f
konst konstue = 55555.......................................................................................................55555f
konst konstue = 666666..............................................0.........................................................F
konst konstue = 7777777.............................................0.........................................................F
konst konstue = 88888888.9...0F
konst konstue = 999999999.0..2.f

konst konstue = 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000........f
konst konstue = 99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.0.F
konst konstue = 222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222...0.1f
konst konstue = 555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555123456785012345678501234567850123456785012345678501234567850.0.1F

konst konstue = .0....f
konst konstue = .1.1..f
konst konstue = .2.2..3f
konst konstue = .3.0.0.0.0.0.0f
konst konstue = .4.00000.F
konst konstue = .5.1.2.3.4.5.6.f
konst konstue = .6..1..2.3.4..5F
konst konstue = .7.8..9...0....1f
konst konstue = .8.F
